--- a/tests/library-config.yml
+++ b/tests/library-config.yml
@@ -4,6 +4,7 @@ source:
     user: geoscixyz
     repo: geosci-labs
     branch: master
+    directory: notebooks
 
 # setup options for the library
 setup:
